--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             </div>
         </div>
         <div class="copyright">
-            <p>&copy; 2025 nextplay. All rights reserved.</p>
+            <p>&copy; 2025 Nextplay. All rights reserved.</p>
         </div>
     </footer>
 </body>
