--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
         <div class="header-container">
             <!-- Logo -->
             <div class="logo-container">
-                <div class="logo-icon">G</div>
-                <div class="logo-text">GameVault</div>
+                <img src="assets/images/logo.png" alt="My Logo" width="150">
             </div>
             
             <!-- Navigation -->
