--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
 
     <!-- Hero section -->
     <section class="hero">
+        <video autoplay muted loop playsinline id="heroVideo">
+    <source src="video.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
         <div class="hero-content">
             <h1>Explore Your Favorite Games</h1>
             <p>Access thousands of free games across multiple platforms.!</p>
