--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <!-- Hero section -->
     <section class="hero">
         <video autoplay muted loop playsinline id="heroVideo">
-    <source src="https://github.com/othmanemoumen/nextplay/raw/refs/heads/main/assets/images/111535-691216380.mp4" type="video/mp4">
+    <source src="" type="video/mp4">
     Your browser does not support the video tag.
   </video>
         <div class="hero-content">
