--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
        
         <div class="hero-content">
              <video autoplay muted loop playsinline id="heroVideo">
-    <source src="" type="video/mp4">
+    <source src="https://github.com/othmanemoumen/nextplay/raw/refs/heads/main/assets/images/249135_small.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
             <h1>Explore Your Favorite Games</h1>
