--- a/index.html
+++ b/index.html
@@ -47,19 +47,24 @@
         </div>
     </header>
 
-    <!-- Hero section -->
-    <section class="hero">
-       
-        <div class="hero-content">
-             <video autoplay muted loop playsinline id="heroVideo">
+  <!-- Hero section -->
+<section class="hero">
+  
+  <!-- Video background -->
+  <video autoplay muted loop playsinline id="heroVideo">
     <source src="https://github.com/othmanemoumen/nextplay/raw/refs/heads/main/assets/images/249135_small.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
-            <h1>Explore Your Favorite Games</h1>
-            <p>Access thousands of free games across multiple platforms.!</p>
-            <a href="#" class="btn">Explore Games</a>
-        </div>
-    </section>
+
+  <!-- Overlay Content -->
+  <div class="hero-content">
+    <h1>Explore Your Favorite Games</h1>
+    <p>Access thousands of free games across multiple platforms!</p>
+    <a href="#" class="btn">Explore Games</a>
+  </div>
+
+</section>
+
 
     <!-- Featured games section -->
     <section class="featured-games">
