--- a/gameinfo.html
+++ b/gameinfo.html
@@ -51,8 +51,8 @@
   
   <div class="app-container">
        
-        
         <!-- Main Game Card -->
+    <h2 class="section-title">App</h2>
         <div class="game-card">
             <div class="game-icon">
                 <img src="/api/placeholder/100/100" alt="Game Icon">
