--- a/gameinfo.html
+++ b/gameinfo.html
@@ -50,7 +50,7 @@
 
   
   <div class="app-container">
-       
+        <div class="app-container">
         <!-- Main Game Card -->
     <h2 class="section-title">App</h2>
         <div class="game-card">
@@ -192,6 +192,7 @@
         </div>
     </div>
 
+        </div>
 
 
     <!-- Footer -->
