--- a/gameinfo.html
+++ b/gameinfo.html
@@ -35,7 +35,7 @@
                     <div class="rating-stars">★★★★☆</div>
                     <div class="rating-count">4.2 • 24K Reviews</div>
                 </div>
-                <button class="download-button">GET</button>
+                <button class="download-button">Free Download </button>
             </div>
         </div>
         
