--- a/gameinfo.html
+++ b/gameinfo.html
@@ -26,11 +26,11 @@
     <h2 class="section-title">App</h2>
         <div class="game-card">
             <div class="game-icon">
-                <img src="/api/placeholder/100/100" alt="Game Icon">
+<img src="assets/images/reddead.png" alt="Game Icon" class="game-icon"> 
             </div>
             <div class="game-info">
-                <h1 class="game-title">Epic Adventure</h1>
-                <div class="game-developer">Awesome Games Studio</div>
+                <h1 class="game-title">Red Dead Redemption 2</h1>
+                <div class="game-developer">Rockstar Games</div>
                 <div class="rating-container">
                     <div class="rating-stars">★★★★☆</div>
                     <div class="rating-count">4.2 • 24K Reviews</div>
@@ -59,8 +59,7 @@
         <div class="description-container">
             <h2 class="section-title">About This Game</h2>
             <p class="description-text">
-                Epic Adventure is an action-packed role-playing game where you explore vast landscapes, battle fearsome enemies, and uncover ancient mysteries. Team up with friends to take on challenging dungeons and raids.
-            </p>
+Red Dead Redemption 2 is an action-adventure game developed by Rockstar Games. It was released in October 2018 for PlayStation 4, Xbox One, and later for PC. The game is set in the late 1800s in a fictionalized version of the American West, a time of significant change as the Wild West era comes to an end.            </p>
            
         </div>
         
