--- a/gameinfo.html
+++ b/gameinfo.html
@@ -23,7 +23,7 @@
   
   <div class="app-container">
         <!-- Main Game Card -->
-    <h2 class="section-title">App</h2>
+    <h2 class="section-title">Game</h2>
         <div class="game-card">
             <div class="game-icon">
 <img src="assets/images/reddead.png" alt="Game Icon" class="game-icon"> 
