--- a/gameinfo.html
+++ b/gameinfo.html
@@ -44,13 +44,16 @@
             <h2 class="section-title">Screenshots</h2>
             <div class="screenshots-scroll">
                 <div class="screenshot">
-                    <img src="/api/placeholder/280/158" alt="Screenshot 1">
+                    <img src="assets/images/reddead/reddeadsc1.png" alt="Screenshot 1">
                 </div>
                 <div class="screenshot">
-                    <img src="/api/placeholder/280/158" alt="Screenshot 2">
+                    <img src="assets/images/reddead/reddeadsc2.png" alt="Screenshot 2">
                 </div>
                 <div class="screenshot">
-                    <img src="/api/placeholder/280/158" alt="Screenshot 3">
+                    <img src="assets/images/reddead/reddeadsc3.png" alt="Screenshot 3">
+                </div>
+                 <div class="screenshot">
+                    <img src="assets/images/reddead/reddeadsc4.png" alt="Screenshot 4">
                 </div>
             </div>
         </div>
@@ -108,7 +111,8 @@ Red Dead Redemption 2 is an action-adventure game developed by Rockstar Games. I
                 </div>
                 <div class="rating-stars">★★★★★</div>
                 <p class="review-text">
-                    Absolutely love this game! The graphics are stunning and the gameplay is super addictive. Can't stop playing!
+                    I’ve never seen a game world this alive. The attention to detail is insane! You can just stand there for hours and watch the weather change or see animals going about their business. It feels like a real world.
+
                 </p>
             </div>
             
@@ -119,8 +123,7 @@ Red Dead Redemption 2 is an action-adventure game developed by Rockstar Games. I
                 </div>
                 <div class="rating-stars">★★★★☆</div>
                 <p class="review-text">
-                    Great game overall. The story is compelling but some levels are too difficult. Would recommend to any RPG fan.
-                </p>
+This is more than just a game to me. The hunting, fishing, and even just riding my horse across the landscape feels so calming. Sometimes I just get lost in the world and forget I’m supposed to be doing missions.               </p>
             </div>
         </div>
         
