--- a/godofwar.html
+++ b/godofwar.html
@@ -30,7 +30,7 @@
 <img src="assets/images/godofwar/godofwar.png" alt="Game Icon" class="game-icon"> 
             </div>
             <div class="game-info">
-                <h1 class="game-title">Red Dead Redemption 2</h1>
+                <h1 class="game-title">God Of War </h1>
                 <div class="game-developer">Rockstar Games</div>
                 <div class="rating-container">
                     <div class="rating-stars">★★★★☆</div>
