--- a/gta5.html
+++ b/gta5.html
@@ -27,7 +27,7 @@
     <h2 class="section-title">Game</h2>
         <div class="game-card">
             <div class="game-icon">
-<img src="assets/images/reddead/reddeadlogo.png" alt="Game Icon" class="game-icon"> 
+<img src="assets/images/gta5/gta5.png" alt="Game Icon" class="game-icon"> 
             </div>
             <div class="game-info">
                 <h1 class="game-title">Gta 5</h1>
