--- a/gta5.html
+++ b/gta5.html
@@ -61,7 +61,7 @@
         
         <!-- Description -->
         <div class="description-container">
-            <h2 class="section-title">About This Game</h2>
+            <h2 class="section-title">Description</h2>
             <p class="description-text">
 Grand Theft Auto V (GTA V) is an action-adventure game developed by Rockstar North and published by Rockstar Games. Released in September 2013, it is the seventh main entry in the Grand Theft Auto series. Set in the fictional state of San Andreas, based on Southern California, the game features an expansive open world that includes the city of Los Santos, inspired by Los Angeles.           
         </div>
