--- a/ittakestwo.html
+++ b/ittakestwo.html
@@ -60,7 +60,7 @@
         
         <!-- Description -->
         <div class="description-container">
-            <h2 class="section-title">About This Game</h2>
+            <h2 class="section-title">Description</h2>
             <p class="description-text">
 It Takes Two is a critically acclaimed cooperative action-adventure platformer developed by Hazelight Studios and directed by Josef Fares. Released in 2021, the game is designed exclusively for two players, either in local or online co-op, and is renowned for its inventive gameplay mechanics, heartfelt storytelling, and imaginative level design.
  </div>
