--- a/residentevil4.html
+++ b/residentevil4.html
@@ -27,7 +27,7 @@
     <h2 class="section-title">Game</h2>
         <div class="game-card">
             <div class="game-icon">
-<img src="assets/images/re4/re4.png" alt="Game Icon" class="game-icon"> 
+<img src="assets/images/residentevil/residentevil.png" alt="Game Icon" class="game-icon"> 
             </div>
             <div class="game-info">
                 <h1 class="game-title">Resident Evil 4</h1>
@@ -45,16 +45,16 @@
             <h2 class="section-title">Screenshots</h2>
             <div class="screenshots-scroll">
                 <div class="screenshot">
-                    <img src="assets/images/re4/re4sc1.png" alt="Screenshot 1">
+                    <img src="assets/images/residentevil/re4sc1.png" alt="Screenshot 1">
                 </div>
                 <div class="screenshot">
-                    <img src="assets/images/re4/re4sc2.png" alt="Screenshot 2">
+                    <img src="assets/images/residentevil/re4sc2.png" alt="Screenshot 2">
                 </div>
                 <div class="screenshot">
-                    <img src="assets/images/re4/re4sc3.png" alt="Screenshot 3">
+                    <img src="assets/images/residentevil/re4sc3.png" alt="Screenshot 3">
                 </div>
                  <div class="screenshot">
-                    <img src="assets/images/re4/re4sc4.png" alt="Screenshot 4">
+                    <img src="assets/images/residentevil/re4sc4.png" alt="Screenshot 4">
                 </div>
             </div>
         </div>
