--- a/sekiro.html
+++ b/sekiro.html
@@ -60,7 +60,7 @@
         
         <!-- Description -->
         <div class="description-container">
-            <h2 class="section-title">About This Game</h2>
+            <h2 class="section-title">Description</h2>
             <p class="description-text">
 Sekiro: Shadows Die Twice is a critically acclaimed action-adventure game developed by FromSoftware, renowned for its challenging combat and immersive world-building. Here's an overview of user reviews and feedback           
         </div>
