--- a/residentevil4.html
+++ b/residentevil4.html
@@ -61,7 +61,7 @@
         
         <!-- Description -->
         <div class="description-container">
-            <h2 class="section-title">About This Game</h2>
+            <h2 class="section-title">Description</h2>
             <p class="description-text">
 The 2023 remake of Resident Evil 4 has garnered widespread acclaim from both critics and players, revitalizing the classic 2005 title with modern enhancements. Here's an overview of user reviews and feedback           
         </div>
