--- a/reddeadredemption.html
+++ b/reddeadredemption.html
@@ -60,7 +60,7 @@
         
         <!-- Description -->
         <div class="description-container">
-            <h2 class="section-title">About This Game</h2>
+            <h2 class="section-title">Description</h2>
             <p class="description-text">
 Red Dead Redemption 2 is an action-adventure game developed by Rockstar Games. It was released in October 2018 for PlayStation 4, Xbox One, and later for PC. The game is set in the late 1800s in a fictionalized version of the American West, a time of significant change as the Wild West era comes to an end.            </p>
            
