--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nextplay- Download Free Games</title>
     <link rel="stylesheet" href="assets/css/style.css">
-
+<script src="https://unpkg.com/lottie-web@latest/build/player/lottie.min.js"></script>
 </head>
 <body>
     <!-- Header with improved dark gray design -->
@@ -171,5 +171,10 @@
             <p>&copy; 2025 Nextplay. All rights reserved.</p>
         </div>
     </footer>
+<div id="lottie" style="width: 300px; height: 300px;"></div>
+
+  <!-- Link your JS file at the end of body -->
+  <script src="js/lottie-player.js"></script>
+
 </body>
 </html>
