--- a/index.html
+++ b/index.html
@@ -171,10 +171,8 @@
             <p>&copy; 2025 Nextplay. All rights reserved.</p>
         </div>
     </footer>
-<div id="lottie" style="width: 300px; height: 300px;"></div>
-
-  <!-- Link your JS file at the end of body -->
-  <script src="js/lottie-player.js"></script>
+<script src="https://unpkg.com/lottie-web@latest/build/player/lottie.min.js"></script>
+<script src="js/lottie-loader.js"></script>
 
 </body>
 </html>
