--- a/godofwar.html
+++ b/godofwar.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nextplay- Download Free Games</title>
     <link rel="stylesheet" href="assets/css/style2.css">
+      <script src="https://unpkg.com/lottie-web@latest/build/player/lottie.min.js"></script>
+
 
 </head>
 <body>
@@ -167,5 +169,13 @@ This game is a solid 10 out of 10. It is a masterpiece among masterpieces. The o
             <p>&copy; 2025 Nextplay. All rights reserved.</p>
         </div>
     </footer>
+
+  <!-- Animation container -->
+  <div id="lottie" style="width: 300px; height: 300px;"></div>
+
+  <!-- Your custom JS file -->
+  <script src="js/lottie-loader.js"></script>
+
+    
 </body>
 </html>
