--- a/gta5.html
+++ b/gta5.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nextplay- Download Free Games</title>
     <link rel="stylesheet" href="assets/css/style2.css">
-
+  <script src="https://unpkg.com/lottie-web@latest/build/player/lottie.min.js"></script>
 </head>
 <body>
     <!-- Header with improved dark gray design -->
@@ -166,5 +166,12 @@ Grand Theft Auto V is one of the most universally praised games of all time. Thi
             <p>&copy; 2025 Nextplay. All rights reserved.</p>
         </div>
     </footer>
+
+  <!-- Animation container -->
+  <div id="lottie" style="width: 300px; height: 300px;"></div>
+
+  <!-- Your custom JS file -->
+  <script src="js/lottie-loader.js"></script>
+    
 </body>
 </html>
