--- a/ittakestwo.html
+++ b/ittakestwo.html
@@ -165,5 +165,10 @@ Best couch co-op game. Just after the recognition of GOTY, more and more co-op g
             <p>&copy; 2025 Nextplay. All rights reserved.</p>
         </div>
     </footer>
+      <!-- Animation container -->
+  <div id="lottie" style="width: 300px; height: 300px;"></div>
+
+  <!-- Your custom JS file -->
+  <script src="js/lottie-loader.js"></script>
 </body>
 </html>
