--- a/residentevil4.html
+++ b/residentevil4.html
@@ -166,5 +166,10 @@ The best remake I've ever played. Good graphics, amazing sound effects, excellen
             <p>&copy; 2025 Nextplay. All rights reserved.</p>
         </div>
     </footer>
+      <!-- Animation container -->
+  <div id="lottie" style="width: 300px; height: 300px;"></div>
+
+  <!-- Your custom JS file -->
+  <script src="js/lottie-loader.js"></script>
 </body>
 </html>
