--- a/sekiro.html
+++ b/sekiro.html
@@ -165,7 +165,10 @@ It will challenge you in ways not even Dark Souls or Bloodborne will... The deep
             <p>&copy; 2025 Nextplay. All rights reserved.</p>
         </div>
     </footer>
-https://othmanemoumen.github.io/nextplay/#
-    
+  <!-- Animation container -->
+  <div id="lottie" style="width: 300px; height: 300px;"></div>
+
+  <!-- Your custom JS file -->
+  <script src="js/lottie-loader.js"></script>    
 </body>
 </html>
