--- a/spiderman.html
+++ b/spiderman.html
@@ -165,5 +165,11 @@ The graphics are purely amazing. They are the best to date and really take advan
             <p>&copy; 2025 Nextplay. All rights reserved.</p>
         </div>
     </footer>
+
+      <!-- Animation container -->
+  <div id="lottie" style="width: 300px; height: 300px;"></div>
+
+  <!-- Your custom JS file -->
+  <script src="js/lottie-loader.js"></script>
 </body>
 </html>
