--- a/sekiro.html
+++ b/sekiro.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nextplay- Download Free Games</title>
     <link rel="stylesheet" href="assets/css/style2.css">
+  <script src="https://unpkg.com/lottie-web@latest/build/player/lottie.min.js"></script>
 
 </head>
 <body>
