--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nextplay- Download Free Games</title>
     <link rel="stylesheet" href="assets/css/style.css">
-  <script src="https://unpkg.com/lottie-web@latest/build/player/lottie.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/lottie-web@5.9.1/build/player/lottie.min.js"></script>
+
 </head>
 <body>
     <!-- Header with improved dark gray design -->
@@ -171,11 +172,7 @@
             <p>&copy; 2025 Nextplay. All rights reserved.</p>
         </div>
     </footer>
-<!-- Animation container -->
   <div id="lottie" style="width: 300px; height: 300px;"></div>
-
-  <!-- Your custom JS file -->
-  <script src="js/lottie-loader.js"></script>
 
 </body>
 </html>
