--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
         </div>
     </footer>
   <div id="lottie" style="width: 300px; height: 300px;"></div>
+  <script src="scripts/main.js"></script>
 
 </body>
 </html>
