--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
             <p>&copy; 2025 Nextplay. All rights reserved.</p>
         </div>
     </footer>
-  <div id="lottie" style="width: 300px; height: 300px;"></div>
+    <div id="lottie-animation" style="width: 800px; height: 600px;"></div>
 
-  <script src="javascripts/scripts/lottie.js"></script>
+  <script src="assets/javascripts/lottie-loader.js"></script>
 </body>
 </html>
