--- a/index.html
+++ b/index.html
@@ -174,6 +174,24 @@
     </footer>
     <div id="lottie-animation" style="width: 800px; height: 600px;"></div>
 
-  <script src="assets/javascripts/lottie-loader.js"></script>
+  <!-- Include your custom Lottie Loader -->
+    <script src="assets/javascript/lottie-loader.js"></script>
+    
+    <!-- Initialize the animation loader -->
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const loader = new LottieLoader();
+            
+            // Use relative path matching your folder structure
+            loader.loadAnimation(
+                'assets/animation/lottie.json',  // Path to your animation file
+                '#lottie-animation',             // Container selector
+                { 
+                    autoplay: true, 
+                    loop: true 
+                }
+            );
+        });
+    </script>
 </body>
 </html>
