--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
     <div id="lottie-animation" style="width: 800px; height: 600px;"></div>
 
   <!-- Include your custom Lottie Loader -->
-    <script src="assets/javascript/lottie-loader.js"></script>
+    <script src="assets/javascripts/lottie-loader.js"></script>
     
     <!-- Initialize the animation loader -->
     <script>
@@ -184,7 +184,7 @@
             
             // Use relative path matching your folder structure
             loader.loadAnimation(
-                'assets/animation/lottie.json',  // Path to your animation file
+                'assets/animations/lottie.json',  // Path to your animation file
                 '#lottie-animation',             // Container selector
                 { 
                     autoplay: true, 
