--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nextplay- Download Free Games</title>
     <link rel="stylesheet" href="assets/css/style.css">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.6/lottie.min.js"></script>
+    <link rel="stylesheet" href="assets/css/loader.css">
 
 </head>
 <body>
+<div class="loader"></div>
     <!-- Header with improved dark gray design -->
     <header>
         <div class="header-container">
