--- a/index.html
+++ b/index.html
@@ -173,19 +173,10 @@
             <p>&copy; 2025 Nextplay. All rights reserved.</p>
         </div>
     </footer>
-<div id="lottie-container" style="width: 400px; height: 400px;"></div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.6/lottie.min.js"></script>
-<div id="lottie-container" style="width: 400px; height: 400px;"></div>
-<script>
-    var animation = lottie.loadAnimation({
-        container: document.getElementById('lottie-container'),
-        renderer: 'svg',
-        loop: true,
-        autoplay: true,
-        path: 'https://lottie.host/embed/7e7617af-53fc-4337-9d85-5576954a8e46/7IrnTgHoSG.json' // Your animation URL
-    });
-</script>
+<script src="javascript/loader.js"></script>
+
+
 
 </body>
 </html>
