--- a/gta5.html
+++ b/gta5.html
@@ -10,6 +10,8 @@
   <script src="https://unpkg.com/lottie-web@latest/build/player/lottie.min.js"></script>
 </head>
 <body>
+    <div class="loader"></div>
+
     <!-- Header with improved dark gray design -->
     <header>
         <div class="header-container">
