--- a/sekiro.html
+++ b/sekiro.html
@@ -10,7 +10,8 @@
 
 </head>
 <body>
-    <!-- Header with improved dark gray design -->
+    <div class="loader"></div>
+<!-- Header with improved dark gray design -->
     <header>
         <div class="header-container">
             <!-- Logo -->
