--- a/spiderman.html
+++ b/spiderman.html
@@ -7,10 +7,11 @@
     <title>Nextplay- Download Free Games</title>
     <link rel="stylesheet" href="assets/css/style2.css">
   <script src="https://unpkg.com/lottie-web@latest/build/player/lottie.min.js"></script>
-
+<link rel="stylesheet" href="assets/css/loader.css">
 </head>
 <body>
-    <!-- Header with improved dark gray design -->
+   <div class="loader"></div>
+ <!-- Header with improved dark gray design -->
     <header>
         <div class="header-container">
             <!-- Logo -->
