--- a/ittakestwo.html
+++ b/ittakestwo.html
@@ -7,7 +7,7 @@
     <title>Nextplay- Download Free Games</title>
     <link rel="stylesheet" href="assets/css/style2.css">
   <script src="https://unpkg.com/lottie-web@latest/build/player/lottie.min.js"></script>
-
+<link rel="stylesheet" href="assets/css/loader.css">
 </head>
 <body>
    <div class="loader"></div>
