--- a/gta5.html
+++ b/gta5.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="loader"></div>
-
+<link rel="stylesheet" href="assets/css/loader.css">
     <!-- Header with improved dark gray design -->
     <header>
         <div class="header-container">
