--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         </div>
     </footer>
 
-<script src="javascript/loader.js"></script>
+<script src="javascripts/loader.js"></script>
 
 
 
