--- a/godofwar.html
+++ b/godofwar.html
@@ -171,11 +171,8 @@ This game is a solid 10 out of 10. It is a masterpiece among masterpieces. The o
         </div>
     </footer>
 
-  <!-- Animation container -->
-  <div id="lottie" style="width: 300px; height: 300px;"></div>
+<script src="javascripts/loader.js"></script>
 
-  <!-- Your custom JS file -->
-  <script src="js/lottie-loader.js"></script>
 
     
 </body>
