--- a/gta5.html
+++ b/gta5.html
@@ -169,11 +169,7 @@ Grand Theft Auto V is one of the most universally praised games of all time. Thi
         </div>
     </footer>
 
-  <!-- Animation container -->
-  <div id="lottie" style="width: 300px; height: 300px;"></div>
+<script src="javascripts/loader.js"></script>
 
-  <!-- Your custom JS file -->
-  <script src="js/lottie-loader.js"></script>
-    
 </body>
 </html>
