--- a/ittakestwo.html
+++ b/ittakestwo.html
@@ -167,10 +167,7 @@ Best couch co-op game. Just after the recognition of GOTY, more and more co-op g
             <p>&copy; 2025 Nextplay. All rights reserved.</p>
         </div>
     </footer>
-      <!-- Animation container -->
-  <div id="lottie" style="width: 300px; height: 300px;"></div>
+<script src="javascripts/loader.js"></script>
 
-  <!-- Your custom JS file -->
-  <script src="js/lottie-loader.js"></script>
 </body>
 </html>
