--- a/reddeadredemption.html
+++ b/reddeadredemption.html
@@ -170,10 +170,7 @@ This is more than just a game to me. The hunting, fishing, and even just riding 
             <p>&copy; 2025 Nextplay. All rights reserved.</p>
         </div>
     </footer>
-      <!-- Animation container -->
-  <div id="lottie" style="width: 300px; height: 300px;"></div>
+ <script src="javascripts/loader.js"></script>
 
-  <!-- Your custom JS file -->
-  <script src="js/lottie-loader.js"></script>
 </body>
 </html>
