--- a/residentevil4.html
+++ b/residentevil4.html
@@ -168,10 +168,7 @@ The best remake I've ever played. Good graphics, amazing sound effects, excellen
             <p>&copy; 2025 Nextplay. All rights reserved.</p>
         </div>
     </footer>
-      <!-- Animation container -->
-  <div id="lottie" style="width: 300px; height: 300px;"></div>
+  <script src="javascripts/loader.js"></script>
 
-  <!-- Your custom JS file -->
-  <script src="js/lottie-loader.js"></script>
 </body>
 </html>
