--- a/sekiro.html
+++ b/sekiro.html
@@ -167,10 +167,7 @@ It will challenge you in ways not even Dark Souls or Bloodborne will... The deep
             <p>&copy; 2025 Nextplay. All rights reserved.</p>
         </div>
     </footer>
-  <!-- Animation container -->
-  <div id="lottie" style="width: 300px; height: 300px;"></div>
+ <script src="javascripts/loader.js"></script>
 
-  <!-- Your custom JS file -->
-  <script src="js/lottie-loader.js"></script>    
 </body>
 </html>
