--- a/spiderman.html
+++ b/spiderman.html
@@ -168,10 +168,7 @@ The graphics are purely amazing. They are the best to date and really take advan
         </div>
     </footer>
 
-      <!-- Animation container -->
-  <div id="lottie" style="width: 300px; height: 300px;"></div>
+<script src="javascripts/loader.js"></script>
 
-  <!-- Your custom JS file -->
-  <script src="js/lottie-loader.js"></script>
 </body>
 </html>
