--- a/godofwar.html
+++ b/godofwar.html
@@ -171,7 +171,7 @@ This game is a solid 10 out of 10. It is a masterpiece among masterpieces. The o
         </div>
     </footer>
 
-<script src="javascripts/loader.js"></script>
+<script src="assets/javascripts/loader.js"></script>
 
 
     
