--- a/gta5.html
+++ b/gta5.html
@@ -169,7 +169,7 @@ Grand Theft Auto V is one of the most universally praised games of all time. Thi
         </div>
     </footer>
 
-<script src="javascripts/loader.js"></script>
+<script src="assets/javascripts/loader.js"></script>
 
 </body>
 </html>
