--- a/ittakestwo.html
+++ b/ittakestwo.html
@@ -167,7 +167,7 @@ Best couch co-op game. Just after the recognition of GOTY, more and more co-op g
             <p>&copy; 2025 Nextplay. All rights reserved.</p>
         </div>
     </footer>
-<script src="javascripts/loader.js"></script>
+<script src="assets/javascripts/loader.js"></script>
 
 </body>
 </html>
