--- a/reddeadredemption.html
+++ b/reddeadredemption.html
@@ -170,7 +170,7 @@ This is more than just a game to me. The hunting, fishing, and even just riding 
             <p>&copy; 2025 Nextplay. All rights reserved.</p>
         </div>
     </footer>
- <script src="javascripts/loader.js"></script>
+<script src="assets/javascripts/loader.js"></script>
 
 </body>
 </html>
