--- a/residentevil4.html
+++ b/residentevil4.html
@@ -168,7 +168,7 @@ The best remake I've ever played. Good graphics, amazing sound effects, excellen
             <p>&copy; 2025 Nextplay. All rights reserved.</p>
         </div>
     </footer>
-  <script src="javascripts/loader.js"></script>
+<script src="assets/javascripts/loader.js"></script>
 
 </body>
 </html>
