--- a/sekiro.html
+++ b/sekiro.html
@@ -167,7 +167,7 @@ It will challenge you in ways not even Dark Souls or Bloodborne will... The deep
             <p>&copy; 2025 Nextplay. All rights reserved.</p>
         </div>
     </footer>
- <script src="javascripts/loader.js"></script>
+<script src="assets/javascripts/loader.js"></script>
 
 </body>
 </html>
