--- a/spiderman.html
+++ b/spiderman.html
@@ -168,7 +168,7 @@ The graphics are purely amazing. They are the best to date and really take advan
         </div>
     </footer>
 
-<script src="javascripts/loader.js"></script>
+<script src="assets/javascripts/loader.js"></script>
 
 </body>
 </html>
