--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
 
 </head>
 <body>
+    <!-- ***** Preloader Start ***** -->
+<div id="js-preloader" class="js-preloader">
+  <div class="preloader-inner">
+    <span class="dot"></span>
+    <div class="dots">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+  </div>
+</div>
+<!-- ***** Preloader End ***** -->
+
     <!-- Header with improved dark gray design -->
     <header>
         <div class="header-container">
