--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nextplay- Download Free Games</title>
-    <link rel="stylesheet" href="assets/css/loader.css">
+        <link rel="stylesheet" href="assets/css/style.css">
+ <link rel="stylesheet" href="assets/css/loader.css">
 
 </head>
 <body>
