--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 </head>
 <body>
    
+ <div class="preloader">
+        <div class="dots-container bounce">
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+        </div>
+    </div>
 
     <!-- Header with improved dark gray design -->
     <header>
