--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
 </head>
 <body>
    
-        <div class="dots-container bounce">
-            <div class="dot"></div>
-            <div class="dot"></div>
-            <div class="dot"></div>
-        </div>
+     <div id="js-preloader" class="js-preloader">
+  <div class="preloader-inner">
+    <span class="dot"></span>
+    <div class="dots">
+      <span></span>
+      <span></span>
+      <span></span>
     </div>
-
+  </div>
+</div>
     <!-- Header with improved dark gray design -->
     <header>
         <div class="header-container">
