--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
    
-     <div id="js-preloader" class="js-preloader">
+ <!-- ***** Preloader Start ***** -->
+<div id="js-preloader" class="js-preloader">
   <div class="preloader-inner">
     <span class="dot"></span>
     <div class="dots">
@@ -20,6 +21,8 @@
     </div>
   </div>
 </div>
+<!-- ***** Preloader End ***** -->
+
     <!-- Header with improved dark gray design -->
     <header>
         <div class="header-container">
