--- a/gta5.html
+++ b/gta5.html
@@ -7,10 +7,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nextplay- Download Free Games</title>
     <link rel="stylesheet" href="assets/css/style2.css">
+<link rel="stylesheet" href="assets/css/loader.css">
 </head>
 <body>
-    <div class="loader"></div>
-<link rel="stylesheet" href="assets/css/loader.css">
+ <!-- ***** Preloader Start ***** -->
+<div id="js-preloader" class="js-preloader">
+  <div class="preloader-inner">
+    <span class="dot"></span>
+    <div class="dots">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+  </div>
+</div>
+<!-- ***** Preloader End ***** -->
     <!-- Header with improved dark gray design -->
     <header>
         <div class="header-container">
