--- a/index.html
+++ b/index.html
@@ -11,16 +11,14 @@
 <body>
    
  <!-- ***** Preloader Start ***** -->
-<div id="js-preloader" class="js-preloader">
-  <div class="preloader-inner">
-    <span class="dot"></span>
-    <div class="dots">
-      <span></span>
-      <span></span>
-      <span></span>
+<div class="preloader">
+        <div class="dots-container bounce">
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+        </div>
     </div>
-  </div>
-</div>
 <!-- ***** Preloader End ***** -->
 
 
