--- a/godofwar.html
+++ b/godofwar.html
@@ -11,17 +11,15 @@
 
 </head>
 <body>
-     <!-- ***** Preloader Start ***** -->
-<div id="js-preloader" class="js-preloader">
-  <div class="preloader-inner">
-    <span class="dot"></span>
-    <div class="dots">
-      <span></span>
-      <span></span>
-      <span></span>
+    <!-- ***** Preloader Start ***** -->
+<div class="preloader">
+        <div class="dots-container bounce">
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+        </div>
     </div>
-  </div>
-</div>
 <!-- ***** Preloader End ***** -->
   <!-- Header with improved dark gray design -->
     <header>
