--- a/residentevil4.html
+++ b/residentevil4.html
@@ -10,8 +10,16 @@
 <link rel="stylesheet" href="assets/css/loader.css">
 </head>
 <body>
-   <div class="loader"></div>
- <!-- Header with improved dark gray design -->
+ <!-- ***** Preloader Start ***** -->
+<div class="preloader">
+        <div class="dots-container bounce">
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+        </div>
+    </div>
+<!-- ***** Preloader End ***** --> <!-- Header with improved dark gray design -->
     <header>
         <div class="header-container">
             <!-- Logo -->
