--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
     </footer>
 
   <script src="assets/javascripts/loader.js"></script>
+  <script src="assets/javascripts/js.js"></script>
 
 
 </body>
