--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   <!-- Featured games section -->
     <section class="featured-games">
         <h2 class="section-title">Featured Games</h2>
-       <div class="cards-container">
+       <div class="games-grid">
         <!-- App Card 1 -->
         <div class="card">
             <div class="bg">
