--- a/index.html
+++ b/index.html
@@ -66,8 +66,12 @@
   <video autoplay muted loop playsinline id="heroVideo">
     <source src="assets/videos/background.mp4" type="video/mp4">
   </video>
+  <div class="overlay"></div>
+
  
 </section>
+
+
 
 
 
