--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <!-- Hero section -->
 <section class="hero">
   <video autoplay muted loop playsinline id="heroVideo">
-    <source src="assets/videos/bbanner.mp4" type="video/mp4">
+    <source src="assets/videos/banner.mp4" type="video/mp4">
   </video>
   <div class="overlay"></div>
 
