--- a/index.html
+++ b/index.html
@@ -246,6 +246,7 @@
 
   <script src="assets/javascripts/loader.js"></script>
   <script src="assets/javascripts/js.js"></script>
+  <script src="assets/javascripts/banner.js"></script>
 
 
 </body>
