--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
    
  <!-- ***** Preloader Start ***** -->
 <!-- From Uiverse.io by SelfMadeSystem --> 
+<!-- From Uiverse.io by SelfMadeSystem --> 
 <div class="loader">
   <svg height="0" width="0" viewBox="0 0 64 64" class="absolute">
     <defs class="s-xJBuHA073rTt" xmlns="http://www.w3.org/2000/svg">
@@ -44,6 +45,7 @@
     <path stroke-linejoin="round" stroke-linecap="round" stroke-width="8" stroke="url(#d)" d="M 4,4 h 4.6230469 v 25.919922 c -0.00276,11.916203 9.8364941,21.550422 21.7500001,21.296875 11.616666,-0.240651 21.014356,-9.63894 21.253906,-21.25586 a 2.0002,2.0002 0 0 0 0,-0.04102 V 4 H 56.25 v 25.919922 c 0,14.33873 -11.581192,25.919922 -25.919922,25.919922 a 2.0002,2.0002 0 0 0 -0.0293,0 C 15.812309,56.052941 3.998433,44.409961 4,29.919922 Z" class="dash" id="u" pathLength="360"></path>
   </svg>
 </div>
+
 
 <!-- ***** Preloader End ***** -->
 
