--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
        <div class="cards-container">
         <!-- App Card 1 -->
         <div class="card">
-            <div class="bg">
+            <div class="card-info">
                 <!-- App icon -->
                 <div class="app-icon">
                     <img src="/api/placeholder/80/80" alt="App Icon">
@@ -151,7 +151,7 @@
         
         <!-- App Card 2 -->
         <div class="card">
-            <div class="bg">
+            <div class="card-info">
                 <!-- App icon -->
                 <div class="app-icon">
                     <img src="/api/placeholder/80/80" alt="App Icon">
@@ -179,7 +179,7 @@
         
         <!-- App Card 3 -->
         <div class="card">
-            <div class="bg">
+            <div class="card-info">
                 <!-- App icon -->
                 <div class="app-icon">
                     <img src="/api/placeholder/80/80" alt="App Icon">
