--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
 <!-- Game particles -->
  <div class="banner">
-    <div class="banner-bg"></div>
+    <div class="card"></div>
     <div class="noise-overlay"></div>
     <div class="glow-overlay"></div>
     <div class="grid-overlay"></div>
