--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
  <div class="banner">
     <div class="card"></div>
             <div class="card-info">
-
-  
+</div>
+  </div>
 
 
   <!-- Featured games section -->
