--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
 
 <!-- Game particles -->
  <div class="banner">
-    <div class="card"></div>
+    <div class="card">
             <div class="card-info">
 </div>
   </div>
-
+</div>
 
   <!-- Featured games section -->
   <section class="featured-games">
