--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
     </header>
 
 <!-- Game particles -->
- <div class="banner">
+  <section class="banner">
     <div class="card">
             <div class="card-info">
 </div>
   </div>
-</div>
+</section>
 
   <!-- Featured games section -->
   <section class="featured-games">
