--- a/index.html
+++ b/index.html
@@ -91,12 +91,11 @@
     </header>
 
 <!-- Game particles -->
-  <section class="banner">
-    <div class="card">
-            <div class="card-info">
-</div>
+  <section class="card">
+     <div class="card-info">
   </div>
 </section>
+
 
   <!-- Featured games section -->
   <section class="featured-games">
