--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
 <!-- Game particles -->
   <section class="banne-card">
-     <div class="card-info">
+     <div class="banner-card-info">
   </div>
 </section>
 
