--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </header>
 
 <!-- Game particles -->
-  <section class="banne-card">
+  <section class="banner-card">
      <div class="banner-card-info">
   </div>
 </section>
