--- a/ittakestwo.html
+++ b/ittakestwo.html
@@ -62,6 +62,7 @@
   <div class="app-container">
         <!-- Main Game Card -->
     <h2 class="section-title">Game</h2>
+         <div class=" style-card ">
         <div class="game-card">
               <div class="style-card">
             <div class="game-icon">
@@ -77,6 +78,7 @@
                 <button class="download-button">Free Download </button>
             </div>
         </div>
+                </div>
                 </div>
 
         <!-- Screenshots -->
