--- a/reddeadredemption.html
+++ b/reddeadredemption.html
@@ -73,7 +73,7 @@
                     <div class="rating-stars">★★★★☆</div>
                     <div class="rating-count">4.2 • 24K Reviews</div>
                 </div>
-                <button class="download-button">Free Download </button>
+                <button class="download-button"> Download </button>
             </div>
         </div>
                 </div>
