--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
    
  <!-- ***** Preloader Start ***** -->
 <!-- Preloader -->
- <div class="spinner">
-    <div class="spinner1"></div>
+<div id="preloader">
+  <div class="spinner"></div>
+  <div class="spinner1"></div>
 </div>
+
 
 <!-- ***** Preloader End ***** -->
 
