--- a/godofwar.html
+++ b/godofwar.html
@@ -12,9 +12,11 @@
 </head>
 <body>
   <!-- Preloader -->
- <div class="spinner">
-    <div class="spinner1"></div>
+<div id="preloader">
+  <div class="spinner"></div>
+  <div class="spinner1"></div>
 </div>
+
 
 <!-- ***** Preloader End ***** -->
 
