--- a/gta5.html
+++ b/gta5.html
@@ -11,9 +11,11 @@
 </head>
 <body>
 <!-- Preloader -->
- <div class="spinner">
-    <div class="spinner1"></div>
+<div id="preloader">
+  <div class="spinner"></div>
+  <div class="spinner1"></div>
 </div>
+
 <!-- ***** Preloader End ***** -->
 
     <!-- Header with improved dark gray design -->
