--- a/residentevil4.html
+++ b/residentevil4.html
@@ -11,8 +11,9 @@
 </head>
 <body>
 <!-- Preloader -->
- <div class="spinner">
-    <div class="spinner1"></div>
+<div id="preloader">
+  <div class="spinner"></div>
+  <div class="spinner1"></div>
 </div>
 
 
