--- a/spiderman.html
+++ b/spiderman.html
@@ -10,9 +10,11 @@
 </head>
 <body>
 <!-- Preloader -->
- <div class="spinner">
-    <div class="spinner1"></div>
+<div id="preloader">
+  <div class="spinner"></div>
+  <div class="spinner1"></div>
 </div>
+
 
 
 <!-- ***** Preloader End ***** -->
