--- a/godofwar.html
+++ b/godofwar.html
@@ -8,6 +8,7 @@
     <title>Nextplay- Download Free Games</title>
     <link rel="stylesheet" href="assets/css/style2.css">
 <link rel="stylesheet" href="assets/css/loader.css">
+<link rel="stylesheet" href="assets/css/popup.css">
 
 </head>
 <body>
@@ -195,6 +196,7 @@ This game is a solid 10 out of 10. It is a masterpiece among masterpieces. The o
     </footer>
 
 <script src="assets/javascripts/loader.js"></script>
+<script src="assets/javascripts/popup.js"></script>
 
 
     
