--- a/godofwar.html
+++ b/godofwar.html
@@ -48,9 +48,9 @@
                     <div class="rating-count">4.2 • 24K Reviews</div>
                 </div>
                 <button class="download-button">Free Download </button>
-            <svg >
-                <path d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"/>
-            </svg>
+           <svg class="download-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+            <path d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"/>
+        </svg>
             </div>
         </div>
 </div>
