--- a/godofwar.html
+++ b/godofwar.html
@@ -52,6 +52,7 @@
             </div>
         </div>
 </div>
+   <div class="style-card">
 <div class="overlay" id="overlay">
         <div class="popup">
             <h3>Downloading File</h3>
@@ -62,7 +63,8 @@
             <div class="status-text" id="statusText">Initializing download...</div>
         </div>
     </div>
-        <!-- Screenshots -->
+           </div>
+ <!-- Screenshots -->
         <div class="screenshots-container">
             <h2 class="section-title">Screenshots</h2>
             <div class="screenshots-scroll">
