--- a/ittakestwo.html
+++ b/ittakestwo.html
@@ -7,6 +7,7 @@
     <title>Nextplay- Download Free Games</title>
     <link rel="stylesheet" href="assets/css/style2.css">
 <link rel="stylesheet" href="assets/css/loader.css">
+<link rel="stylesheet" href="assets/css/popup.css">
 </head>
 <body>
 <!-- Preloader -->
@@ -48,6 +49,18 @@
         </div>
                 </div>
 
+   <div class="overlay" id="overlay">
+     <div class="style-card">
+        <div class="popup">
+            <h3>Downloading File</h3>
+            <div class="loader"></div>
+            <div class="progress-container">
+                <div class="progress-bar" id="progressBar"></div>
+            </div>
+            <div class="status-text" id="statusText">Initializing download...</div>
+        </div>
+    </div>
+           </div>
         <!-- Screenshots -->
         <div class="screenshots-container">
             <h2 class="section-title">Screenshots</h2>
