--- a/ittakestwo.html
+++ b/ittakestwo.html
@@ -194,6 +194,7 @@ Best couch co-op game. Just after the recognition of GOTY, more and more co-op g
         </div>
     </footer>
 <script src="assets/javascripts/loader.js"></script>
+<script src="assets/javascripts/popup.js"></script>
 
 </body>
 </html>
