--- a/sekiro.html
+++ b/sekiro.html
@@ -7,6 +7,7 @@
     <title>Nextplay- Download Free Games</title>
     <link rel="stylesheet" href="assets/css/style2.css">
 <link rel="stylesheet" href="assets/css/loader.css">
+<link rel="stylesheet" href="assets/css/popup.css">
 </head>
 <body>
  <!-- Preloader -->
@@ -47,7 +48,18 @@
             </div>
         </div>
                 </div>
-
+ <div class="overlay" id="overlay">
+     <div class="style-card">
+        <div class="popup">
+            <h3>Downloading File</h3>
+            <div class="loader"></div>
+            <div class="progress-container">
+                <div class="progress-bar" id="progressBar"></div>
+            </div>
+            <div class="status-text" id="statusText">Initializing download...</div>
+        </div>
+    </div>
+           </div>
         <!-- Screenshots -->
         <div class="screenshots-container">
             <h2 class="section-title">Screenshots</h2>
@@ -180,6 +192,7 @@ It will challenge you in ways not even Dark Souls or Bloodborne will... The deep
         </div>
     </footer>
 <script src="assets/javascripts/loader.js"></script>
+<script src="assets/javascripts/popup.js"></script>
 
 </body>
 </html>
