--- a/gta5.html
+++ b/gta5.html
@@ -45,7 +45,7 @@
                     <div class="rating-stars">★★★★☆</div>
                     <div class="rating-count">4.2 • 24K Reviews</div>
                 </div>
-                <button class="download-button">Free Download </button>
+                <button id="downloadBtn" class="download-button">Free Download </button>
             </div>
         </div>
 </div>
