--- a/ittakestwo.html
+++ b/ittakestwo.html
@@ -44,7 +44,7 @@
                     <div class="rating-stars">★★★★☆</div>
                     <div class="rating-count">4.2 • 24K Reviews</div>
                 </div>
-                <button class="download-button"> Download </button>
+                <button id="downloadBtn" class="download-button"> Download </button>
             </div>
         </div>
                 </div>
