--- a/godofwar.html
+++ b/godofwar.html
@@ -64,7 +64,20 @@
         </div>
     </div>
            </div>
- <!-- Screenshots -->
+
+      
+ <!-- This is the container that will appear after download -->
+     <div class="style-card">
+      <div id="downloadContainer" style="display: none;">
+    <!-- Your content here (verification form, offers, links, etc.) -->
+    <h3>Download Ready!</h3>
+    <p>Complete one of the following steps to access your file:</p>
+    <!-- Add your content here -->
+</div>
+ </div>
+   
+      
+      <!-- Screenshots -->
         <div class="screenshots-container">
             <h2 class="section-title">Screenshots</h2>
             <div class="screenshots-scroll">
