--- a/godofwar.html
+++ b/godofwar.html
@@ -67,8 +67,8 @@
 
       
  <!-- This is the container that will appear after download -->
-     <div class="style-card">
-      <div id="downloadContainer" style="display: none;">
+     <div class="style-card"style="display: none;">
+      <div id="downloadContainer" >
     <!-- Your content here (verification form, offers, links, etc.) -->
     <h3>Download Ready!</h3>
     <p>Complete one of the following steps to access your file:</p>
