--- a/godofwar.html
+++ b/godofwar.html
@@ -78,7 +78,8 @@
     <!-- Add your content here -->
 </div>
  </div>
-   
+    </div>
+
       
       <!-- Screenshots -->
         <div class="screenshots-container">
