--- a/godofwar.html
+++ b/godofwar.html
@@ -72,10 +72,17 @@
           <div class="style-card">
            <div class="locker">
 
-    <!-- Your content here (verification form, offers, links, etc.) -->
-    <h3>Download Ready!</h3>
-    <p>Complete one of the following steps to access your file:</p>
-    <!-- Add your content here -->
+    <div class="banner-container">  
+              <!-- Background banner image -->   
+                 <img src="https://m.media-amazon.com/images/I/71HEZBorXiL._AC_UF1000,1000_QL80_.jpg" alt="Banner Background" class="banner-bg" />     
+        <!-- App Icon -->    
+        <img src="https://avatarfiles.alphacoders.com/140/thumb-1920-140579.png" alt="App Icon" class="app-icon" />  
+    </div>  
+               <div class="content">     
+                   <div class="title">Red Dead Redemption 2 Mobile</div> 
+               </div> 
+
+
 </div>
  </div>
     </div>
