--- a/godofwar.html
+++ b/godofwar.html
@@ -72,11 +72,11 @@
           <div class="style-card">
            <div class="locker">
 
-    <div class="banner-container">  
+    <div class="locker-banner">  
               <!-- Background banner image -->   
-                 <img src="https://m.media-amazon.com/images/I/71HEZBorXiL._AC_UF1000,1000_QL80_.jpg" alt="Banner Background" class="banner-bg" />     
+                 <img src="https://m.media-amazon.com/images/I/71HEZBorXiL._AC_UF1000,1000_QL80_.jpg" alt="Banner Background" class="locker-banner-bg" />     
         <!-- App Icon -->    
-        <img src="https://avatarfiles.alphacoders.com/140/thumb-1920-140579.png" alt="App Icon" class="app-icon" />  
+        <img src="https://avatarfiles.alphacoders.com/140/thumb-1920-140579.png" alt="App Icon" class="locker-icon" />  
     </div>  
                <div class="content">     
                    <div class="title">Red Dead Redemption 2 Mobile</div> 
