--- a/godofwar.html
+++ b/godofwar.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="assets/css/style2.css">
 <link rel="stylesheet" href="assets/css/loader.css">
 <link rel="stylesheet" href="assets/css/popup.css">
+<link rel="stylesheet" href="assets/css/locker.css">
 
 </head>
 <body>
