--- a/godofwar.html
+++ b/godofwar.html
@@ -69,7 +69,7 @@
       
  <!-- This is the container that will appear after download -->
      
-      <div id="downloadContainer"style="display: none; opacity: 0; transform: scale(0.7); position: fixed; top: 50%; left: 50%; transform-origin: center; transform: translate(-50%, -50%) scale(0.7); z-index: 1000;" >
+      <div id="downloadContainer" >
           <div class="style-card">
            <div class="locker">
 
