--- a/godofwar.html
+++ b/godofwar.html
@@ -69,7 +69,7 @@
       
  <!-- This is the container that will appear after download -->
            
-              <div class="locker-style-card">
+              <div class="lockerstylecard">
 
            <div class="locker">
 
