--- a/godofwar.html
+++ b/godofwar.html
@@ -69,7 +69,7 @@
       
  <!-- This is the container that will appear after download -->
            
-           <div class="lockerstylecard">
+        <div class="lockerstylecard">
   <div class="locker">
     <div class="locker-banner">
       <!-- Background banner image -->
@@ -78,8 +78,16 @@
       <!-- App Icon -->
       <img src="https://avatarfiles.alphacoders.com/140/thumb-1920-140579.png" alt="App Icon" class="locker-icon" />
     </div>
+
+    <!-- Locker content area -->
+    <div class="locker-content">
+      <h3>Epic Adventure Game</h3>
+      <p>Get access now and start your quest today!</p>
+      <button id="openAppBtn">Open App</button>
+    </div>
   </div>
 </div>
+
       <!-- Screenshots -->
         <div class="screenshots-container">
             <h2 class="section-title">Screenshots</h2>
